force-app/main/default/objects/Plan_Agent_Log__c/Plan_Agent_Log__c.object-meta.xml
<CustomObject>
    <description>Audit log of Ohanafy Plan forecasting agent invocations. One row per copilot call, written by the web-app via Apex REST.</description>
    <label>Plan Agent Log</label>
    <nameField>
        <displayFormat>PAL-{00000000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plan Agent Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>