force-app/main/default/objects/Plan_Agent_Log__c/fields/Conversation_Id__c.field-meta.xml
<CustomField>
    <fullName>Conversation_Id__c</fullName>
    <description>External id linking log rows to a conversation thread.</description>
    <externalId>true</externalId>
    <label>Conversation Id</label>
    <length>64</length>
    <type>Text</type>
</CustomField>