force-app/main/default/objects/Plan_Agent_Log__c/fields/Cost_USD__c.field-meta.xml
<CustomField>
    <fullName>Cost_USD__c</fullName>
    <description>Total dollar cost of the agent call (LLM + any metered external tools).</description>
    <label>Cost (USD)</label>
    <precision>10</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>