force-app/main/default/objects/Plan_Agent_Log__c/fields/Customer_Id_Hash__c.field-meta.xml
<CustomField>
    <fullName>Customer_Id_Hash__c</fullName>
    <description>Hashed customer identifier; never the raw id or account name.</description>
    <label>Customer Id Hash</label>
    <length>64</length>
    <type>Text</type>
</CustomField>