force-app/main/default/objects/Plan_Agent_Log__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>Populated only when Success = false.</description>
    <label>Error Message</label>
    <length>8192</length>
    <type>LongTextArea</type>
</CustomField>