force-app/main/default/objects/Plan_Agent_Log__c/fields/Input_Tokens__c.field-meta.xml
<CustomField>
    <fullName>Input_Tokens__c</fullName>
    <description>LLM input token count.</description>
    <label>Input Tokens</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>