force-app/main/default/objects/Plan_Agent_Log__c/fields/Latency_Ms__c.field-meta.xml
<CustomField>
    <fullName>Latency_Ms__c</fullName>
    <description>Total agent orchestration latency in milliseconds.</description>
    <label>Latency (ms)</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>