force-app/main/default/objects/Plan_Agent_Log__c/fields/Prompt__c.field-meta.xml
<CustomField>
    <fullName>Prompt__c</fullName>
    <description>Raw user prompt that invoked the agent (PII-scrubbed by the web-app before write).</description>
    <label>Prompt</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>