force-app/main/default/objects/Plan_Agent_Log__c/fields/Prompt_Version__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Version__c</fullName>
    <description>Version of the system prompt that produced this response. See packages/web-app/src/lib/versions.ts.</description>
    <label>Prompt Version</label>
    <length>32</length>
    <type>Text</type>
</CustomField>