force-app/main/default/objects/Plan_Agent_Log__c/fields/Response_Text__c.field-meta.xml
<CustomField>
    <fullName>Response_Text__c</fullName>
    <description>Final markdown response returned to the user.</description>
    <label>Response Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>