force-app/main/default/objects/Plan_Agent_Log__c/fields/Scenario_Type__c.field-meta.xml
<CustomField>
    <fullName>Scenario_Type__c</fullName>
    <description>Classifier output: HURRICANE, NEW_SKUS, HOLIDAY_SHIFT, PROMOTION, or null.</description>
    <label>Scenario Type</label>
    <length>64</length>
    <type>Text</type>
</CustomField>