force-app/main/default/objects/Plan_Agent_Log__c/fields/Success__c.field-meta.xml
<CustomField>
    <fullName>Success__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if the agent returned a final response without an error.</description>
    <label>Success</label>
    <type>Checkbox</type>
</CustomField>