force-app/main/default/objects/Plan_Agent_Log__c/fields/Tool_Schema_Version__c.field-meta.xml
<CustomField>
    <fullName>Tool_Schema_Version__c</fullName>
    <description>Version of the ToolCallTrace schema used when serializing Tools_Called.</description>
    <label>Tool Schema Version</label>
    <length>32</length>
    <type>Text</type>
</CustomField>