force-app/main/default/objects/Plan_Agent_Log__c/fields/Tools_Called__c.field-meta.xml
<CustomField>
    <fullName>Tools_Called__c</fullName>
    <description>Human-readable trace, e.g. "queryBaseline(23ms,ok=true), applyScenario(71ms,ok=true)".</description>
    <label>Tools Called</label>
    <length>8192</length>
    <type>LongTextArea</type>
</CustomField>